--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-<h1><i class="fas fa-cog"></i> Club Management</h1>
+<h1><i class="fas fa-cog"></i> Club Administration Console </h1>
 
 <div class="settings-container">
   <div class="search-container global-search-bar">
