--- a/app/static/css/core/responsive.css
+++ b/app/static/css/core/responsive.css
@@ -63,9 +63,9 @@
     }
 }
 
-@media (max-width: 992px) and (orientation: portrait) {
+@media (max-width: 768px) and (orientation: portrait) {
 
-    /* Only show the warning when edit mode is active */
+    /* Only show the warning when edit mode is active on mobile phones */
     .edit-mode-active .orientation-warning {
         display: flex;
         /* Change to flex to enable centering */
