--- a/app/templates/speech_logs.html
+++ b/app/templates/speech_logs.html
@@ -340,7 +340,7 @@
                         <i class="fas fa-play-circle"></i>
                     </a>
                     {% endif %}
-                    {% if log.session_type.Valid_for_Project and is_authorized(current_user.id == log.Owner_ID,
+                    {% if log.session_type.Valid_for_Project and is_authorized(current_user.contact_id in log.owners|map(attribute='id'),
                     Permissions.SPEECH_LOGS_EDIT_ALL) %}
                     <button class="icon-btn edit-log-btn"
                         onclick="openSpeechEditModal({{ log.id }}, null, (this.closest('.speech-log-entry, .role-log-entry') || {}).dataset?.sessionTypeTitle)"
